<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_vertical"
    android:paddingLeft="@dimen/margin_horizontal"
    android:paddingRight="@dimen/margin_horizontal"
    android:paddingTop="@dimen/margin_vertical"
    tools:context="mlipa.move.client.AddActivity">

    <ImageView
        android:id="@+id/iv_activity"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:src="@drawable/activity_not_detected" />

    <TextView
        android:id="@+id/tv_activity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/add_activity_activity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/rg_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_activity_lie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add_activity_lie"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rb_activity_sit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add_activity_sit"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rb_activity_stand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add_activity_stand"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rb_activity_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add_activity_walk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rb_activity_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add_activity_run"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rb_activity_cycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add_activity_cycling"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_delay_chronometer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/add_activity_delay_chronometer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_delay_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/b_start_stop"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:background="@color/bootstrap_blue"
        android:text="@string/add_activity_start"
        android:textColor="@color/white" />
</LinearLayout>
